# stock-agent

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  deploy-unraid.sh  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/local/: devcontainer.json
docs/: AUTHENTICATION_TEST.md  DEV_SETUP.md  DOCKER.md  FIREBASE_SETUP.md  RUNNING.md
docs/agent/: API_REFERENCE.md  AUTHENTICATION_SYSTEM.md  CONTEXT_SUMMARY.md  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md
scripts/: dev.bat  dev.sh  dev_server.py  setup-firebase.sh
services/whatsapp/: .env.example  README.md  index.js  package.json
src/stock_agent/: data_processor.py  flat_downloader.py  main.py  notification_service.py  service.py
src/stock_agent/auth/: __init__.py  auth_service.py  firebase_auth_service.py  models.py
src/stock_agent/cli/: __init__.py  admin.py
src/stock_agent/polygon/: __init__.py  polygon_worker.py  stock_service.py
src/stock_agent/services/: stock_service.py
src/stock_agent/static/: firebase-messaging-sw.js
src/stock_agent/static/js/: auth-utils.js  firebase-auth-sw.js  firebase-auth.js  firebase-messaging-sw.js  htmx-firebase-auth.js
src/stock_agent/stock_math/: __init__.py  stock_service.py
src/stock_agent/templates/: dashboard.html  index.html  login.html  portfolio.html  report.html  stocks.html
src/stock_agent/templates/fragments/: dashboard_favorites.html  dashboard_portfolio.html  favorites_list.html  header.html  major_indexes.html  portfolio_positions.html  portfolio_summary.html  search_results.html  trade_form.html  trades_list.html  user_info.html  whatsapp_recommendations.html
src/stock_agent/web/: __init__.py  web_app.py
