[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "boto3",
    "botocore",
    "pandas",
    "python-dotenv",
    "firebase-admin",
]

[project.scripts]
"stock_agent" = "stock_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 90
extend-include = ["tests"]
extend-exclude = ["__init__.py", "__main__.py"]

[tool.pytest.ini_options]
addopts = "-v --cov=stock_agent --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["stock_agent"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
